--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,12 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-screens": "^3.22.0",
     "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "^1.0.0"
   },
