--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@openspacelabs/react-native-zoomable-view": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
@@ -19,6 +21,9 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
     "react-native-svg": "^13.9.0",
