--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.9",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "^14.3.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
